--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -25,7 +25,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        pip install pytest
-    - name: Test with pytest
+        pip install -e .
+    - name: Test with unittest
       run: |
-        pytest
+        python -m unittest discover tests
