--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,17 @@ build-backend = "hatchling.build"
 
 [project]
 name = "mdeval"
-version = "0.1.2"
+version = "0.1.3"
 description = "A Python implementation of the NIST md-eval.pl script for evaluating rich transcription accuracy."
 readme = "README.md"
 requires-python = ">=3.8"
 license = {text = "MIT"}
 authors = [
   {name = "Quan Wang", email = "quanw@google.com"},
+]
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "Operating System :: OS Independent",
 ]
 dependencies = []
 
